# v-lucent

./: .gitattributes  .gitignore  LICENSE  README.md
local-companion/: index.html  nerve_link_test.py  package-lock.json  package.json  proxy-package.json  proxy-server.cjs  proxy-server.js  run_xtts.bat  screen_vision_service.py  stt_server.py  test-server.mjs  test_http.bat  test_openai_key.py  tsconfig.json  vision_requirements.txt  vite.config.ts
local-companion/crates/companion-wasm/: Cargo.toml
local-companion/crates/companion-wasm/.cargo/: config.toml
local-companion/crates/companion-wasm/src/: lib.rs
local-companion/src/: App.svelte
local-companion/src-tauri/: Cargo.toml  tauri.conf.json
local-companion/src-tauri/.cargo/: config.toml
local-companion/src-tauri/capabilities/: default.json
local-companion/src-tauri/resources/: CPML_LICENSE_XTTS.txt
local-companion/src-tauri/src/: lib.rs  main.rs
local-companion/src/lib/: PuppetRenderer.svelte  SettingsPanel.svelte  VRMRenderer.svelte  emotions.ts  ws.ts
