[package]
name = "openclaw-companion"
version = "0.1.0"
description = "OpenClaw Visual Companion"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
screenshots = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = "0.15"
once_cell = "1.19"
