[package]
name = "companion-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
inox2d = { path = "../../../inox2d-ref/inox2d" }
inox2d-opengl = { path = "../../../inox2d-ref/inox2d-opengl" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
glow = "0.14.1"
glam = "0.29.0"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "console",
]
